@@ -13,6 +13,7 @@ core:
   'use parent' and as fields pragma is not used (see 'base' man)
 * Logger refactoring: no more an Exporter based class to simplify its usage and
   as Logger object should be commonly shared everywhere it is used.
+* Fix command run to also time out while an alarm has been set
 * Few code refactoring
 
 inventory:
@@ -22,6 +23,7 @@ inventory:
 * Fix #349: Include last logged user as usual computer user on win32 platform
 * Linux distro: Add support for reading os-release file and removing LSB support
 * Fix Solaris drives df output parsing adding better zfs handling
+* Make backend-collect-timeout working even while waiting on command output
 
 netdiscovery/netinventory:
 * Bump NetDiscovery & NetInventory task version to 2.4
